tests/operator/not_struct.rev
struct Bar {}
print !Bar    // error: can't use '!' token on anything other than a bool value